# Fate-Engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.zh-CN.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  schema-check.yml
artifacts/: schema_compat_report.json
artifacts/perf/: door_demo_scene_report.json  forest_cabin_demo_scene_report.json  sample_scene_metrics_report.json  stress_scene_report.json
bricks/door/: manifest.json
crates/door_core/: Cargo.toml
docs/: BrickContract.md  BrickWorkflowProductizationTodo.md  DoorParityChecklist.md  Editor3DDemoFoundationTodo.md  Editor3DTestReadiness.md  FirstStep.md  ForestCabinDemo.md  FrameWork.md  PackageConsumeFlow.md  PublisherWorkflowTodo.md  RuntimeSoakCrashArchive.md  ScreenshotOperation.md  TODO.md  Target.md  TestFailureTriage.md  UnityWhiteBoxPivot.md  brick_contract.md  product.md
docs/releases/: compat_matrix.json  editor-3d-test-freeze.md  pending-checkpoint.md  pending-container.md  pending-door.md  pending-ladder.md  pending-switch.md  pending-teleport.md  pending-trigger_zone.md
editor/app/: index.html  package.json  pnpm-lock.yaml  tsconfig.composer-tests.json  tsconfig.json  vite.config.ts
editor/app/src-tauri/: Cargo.toml  tauri.conf.json
editor/app/src-tauri/icons/: icon.icns
editor/app/src-tauri/src/: lib.rs  main.rs  runtime_avatar.rs  runtime_narrative.rs
fixtures/partition/: minimal_partition_expected.json  minimal_partition_scene.json
fixtures/perf/: door_demo_scene.json  forest_cabin_demo_scene.json  sample_scene_metrics.json  stress_scene.json
fixtures/replay/: fixed_recipe.json  matrix_cases.json
fixtures/validation/: cross_brick_dependency.counterexample.json  event_loop.counterexample.json  state_transition_invalid_path.counterexample.json
protocol/compliance/: builtin_resources.index.json  dependency_policy.json
protocol/contracts/: door_envelope.contract.json  interaction_surface.contract.json
protocol/perf/: perf_budget.json  perf_diagnostic.schema.json  runtime_soak_thresholds.json
protocol/runtime/: render_capabilities.json
protocol/schemas/: ability.locomotion.schema.json  actor.humanoid.schema.json  asset.pipeline.schema.json  brick.publish.schema.json  (+12 more)
render/: README.md  config.schema.json  minimal_backend.cpp  minimal_backend.h  render_placeholder.cpp  render_probe_main.cpp
src/: main.cpp
tools/: build_asset_pipeline_plan.py  build_compat_matrix.py  build_release_note.py  check_dependency_compliance.py  check_door_parity.py  check_interaction_contract.py  check_partition_streaming.py  check_perf_budget.py  check_protocol_contract.py  check_publisher_p0.py  check_publisher_p1.py  check_recipe_validation.py  check_render_matrix.py  check_replay_determinism.py  check_replay_matrix.py  check_runtime_soak.py  check_runtime_stability.py  check_schema_compat.py  check_workflow_templates.py  publisher_project_state.py  publisher_workflow.py  release_local.py  replay_determinism_check.py  start_test.sh  validate_schemas.py
ui/: index.html
unity/: README.md
(+229 files in other folders)
