[package]
name = "fate-editor-shell"
version = "0.1.0"
description = "Fate editor desktop shell"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
door_core = { path = "../../../runtime/door_core" }

[features]
default = []
